# esp32serial

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  make_ota_image_c3  make_ota_image_wroom32  makeimage  rust-toolchain.toml
.cargo/: config.toml
src/: apiserver.rs  config.rs  form.js  index.css  lib.rs  serial.rs  state.rs  wifi.rs
templates/: index.html.ask
