[package]
name = "esp32serial"
version = "1.3.0"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
edition = "2024"
resolver = "2"


[[bin]]
name = "esp32serial"
harness = false     # do not use the built-in cargo test harness -> resolve rust-analyzer errors
# test = false

[features]
default = ["esp32-c3"]
esp32-c3 = []
esp-wroom-32 = []
# Backward-compatible aliases (deprecated)
esp32c3 = ["esp32-c3"]
esp32s = ["esp-wroom-32"]


[dependencies]
anyhow = "1.0"
askama = "0.15"
axum = { version = "0.8", features = ["http1", "json"] }
axum-macros = "0.5"
crc = "3.4"
embedded-svc = { version = "0.28", features = ["experimental"] }
esp-idf-hal = "0.45"
esp-idf-svc = { version = "0.51", features = ["alloc", "experimental"] }
esp-idf-sys = { version = "0.36", features = ["binstart"] }
postcard = { version = "1.1", features = ["alloc", "use-crc"] }
serde = "1.0"
tokio = { version = "1.49", features = ["rt", "net", "io-util"] }
tracing = "0.1"

[build-dependencies]
anyhow = "1.0"
build-data = "0.3"
embuild = "0.33"



[profile.release]
debug = false
opt-level = "z"
codegen-units = 1
lto = "fat"
strip = true

[profile.dev]
debug = true
opt-level = 2
lto = "off"

# EOF
